Added transaction list for players. Did some bug fixes for transactions
